--- a/admin.html
+++ b/admin.html
@@ -7,8 +7,8 @@
     <title>Admin</title>
     <link rel="stylesheet" href="styles/style.css">
     <script>
-        //const API_BASE_URL = "http://127.0.0.1:8000";  // Your backend API URL
-        const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";
+        const API_BASE_URL = "http://127.0.0.1:8000";  // Your backend API URL
+        //const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";
 
         // Immediately Invoked Function Expression (IIFE)
         (async () => {
