--- a/landing.html
+++ b/landing.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <script>
-       // const API_BASE_URL = "http://127.0.0.1:8000";  // Your backend API URL
-        const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";
+       const API_BASE_URL = "http://127.0.0.1:8000";  // Your backend API URL
+        //const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";
 
         // Immediately Invoked Function Expression (IIFE) to run before content loads
         (async () => {
