--- a/landing.html
+++ b/landing.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <script>
-       const API_BASE_URL = "http://127.0.0.1:8000";  // Your backend API URL
-        //const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";
+        //const API_BASE_URL = "http://127.0.0.1:8000";                    // in dev branch for testing
+        const API_BASE_URL = "https://coral-app-3m7bi.ondigitalocean.app";  // in main branch for deployment
+
 
         // Immediately Invoked Function Expression (IIFE) to run before content loads
         (async () => {
 
             try {
+
                 // Validate the token with the server
                 const response = await fetch(`${API_BASE_URL}/verify-token`, {
                     method: "GET",
                     credentials: "include", // Include cookies
+                    headers: {
+                        "Accept": "application/json"
+                     }
                 });
+
+                 // Log response headers for debugging
+                console.log("Response headers:", [...response.headers.entries()]);
 
                 if (!response.ok) {
                     // If token validation fails, redirect to the login page
@@ -27,7 +35,7 @@
                 }
 
                 // Token is valid, proceed to load the landing page content
-                const userData = await response.json();  
+                const userData = await response.json();
                 loadLandingPageContent(userData);
 
             } catch (error) {
