--- a/login.html
+++ b/login.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="app.js" defer></script>
-   
+    <script src="./scripts/app.js" defer></script>
 </head>
 <body>
     <h2>Login</h2>
     <form id="loginForm">
-        <label for="email">Email:</label>
+        <label for="loginEmail">Email:</label>
         <input type="email" id="loginEmail" required>
         
-        <label for="password">Password:</label>
+        <label for="loginPassword">Password:</label>
         <input type="password" id="loginPassword" required>
         
         <button type="submit">Login</button>
@@ -25,5 +24,8 @@
         <a href="forgot-password.html">Forgot Password?</a>
     </p>
 
+    <h4>Don't have an account?  
+        <a href="register.html">Join us</a>
+    </h4>
 </body>
 </html>
