--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="app.js" defer></script>
+    <script src="./scripts/app.js" defer></script>
 </head>
 <body>
     <h2>Forgot Password</h2>
     <form id="forgotPasswordForm">
-        <label for="email">Enter your email address:</label>
-        <input type="email" id="email" required>
+        <label for="forgotEmail">Enter your email address:</label>
+        <input type="email" id="forgotEmail" required>
         
         <button type="submit">Send Reset Link</button>
     </form>
