--- a/reset-password.html
+++ b/reset-password.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="app.js" defer></script> 
+    <script src="./scripts/app.js" defer></script>
 </head>
 <body>
     <h2>Reset Password</h2>
     <form id="resetForm">
-        <label for="newPassword">New Password:</label>
-        <input type="password" id="newPassword" required>
+        <label for="resetNewPassword">New Password:</label>
+        <input type="password" id="resetNewPassword" required>
         <button type="submit">Reset Password</button>
     </form>
 </body>
