--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
     <link rel="stylesheet" href="styles/admin.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <script src="./lang/en/user.js"></script>
 
     <script type="module">
         import auth from './scripts/auth.js';
@@ -16,19 +18,17 @@
                 // Initialize your admin page content here
                 console.log('Admin verified, proceeding with page load');
             }
-        });
+        });   
     </script>
     
 </head>
-
-
 <body>
 
     <nav id="navbar">
         <ul>
-            <li><a href="admin.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><button id="logout-button">Logout</button></li>
+            <li><button class="nav-button" onclick="navigateTo('landing.html')">Home</button></li>
+            <li><button class="nav-button" onclick="navigateTo('profile.html')">Profile</button></li>
+            <li><button id="logout-button" class="nav-button">Logout</button></li>
         </ul>
     </nav>
 
@@ -71,9 +71,9 @@
         </div>
     </div>
 
-    <script src="./lang/en/user.js"></script>
-    <script src="./scripts/admin.js"></script>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/admin.js"></script>
+    
 </body>
 
 </html>
