--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="./lang/en/user.js"></script>
     <script src="./scripts/app.js" defer></script>
 </head>
-<body>
-    <h1>Welcome to the App</h1>
-    <a href="login.html">Login</a> | <a href="register.html">Register</a>
+
+<!-- Navbar -->
+<nav id="navbar">
+    <ul>
+        <li><button class="nav-button" onclick="navigateTo('login.html')">Login</button></li>
+        <li><button class="nav-button" onclick="navigateTo('register.html')">Register</button></li>
+    </ul>
+</nav>
 
 
-</body>
+<!-- Main Content -->
+<main>
+    <!-- Label Container -->
+    <div class="label-container">
+        <h1 id="welcome-header"></h1>
+    </div>
+
+    <!-- Description Container -->
+    <div class="description-container">
+        <p id="welcome-description1"></p>
+        <p id="welcome-description2"></p>
+    </div>
+</main>
+
 </html>
