--- a/reset-password.html
+++ b/reset-password.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="./scripts/app.js" defer></script>
+    <script src="./lang/en/user.js"></script>
+    <script src="./scripts/password.js" defer></script>
 </head>
 <body>
     <h2>Reset Password</h2>
